# simdjson_cpm

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml  visual_studio.yml
